Bug 1810751 - Force unified toolbar to overflow in favor of window decorations. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D167031

--HG--
extra : rebase_source : 99824b039f3bc508e443d1f2e380cd6af394ae84
extra : histedit_source : 999a322bdfcce0961bc97cb8e046078a109cae0c

--- a/mail/themes/shared/mail/spacesToolbar.css
+++ b/mail/themes/shared/mail/spacesToolbar.css
@@ -47,6 +47,7 @@
   --spaces-button-badge-padding: 1px 6px;
   --spaces-button-badge-font: 0.9rem;
   --spaces-menuitem-current-indicator-size: 3px;
+  --spaces-total-width: calc(2 * var(--spaces-padding) + var(--spaces-icon-size) + 2 * var(--spaces-button-padding) + 1px);
 }
 
 :root[uidensity="compact"] {
@@ -97,7 +98,11 @@
 .spaces-toolbar:not([hidden]) ~ #messengerBody,
 .spaces-toolbar:not([hidden]) ~ #navigation-toolbox-background #titlebar {
   /* Move the window content in by the width of the spaces toolbar */
-  margin-inline-start: calc(2 * var(--spaces-padding) + var(--spaces-icon-size) + 2 * var(--spaces-button-padding) + 1px);
+  margin-inline-start: var(--spaces-total-width);
+}
+
+.spaces-toolbar:not([hidden]) ~ #navigation-toolbox-background #unifiedToolbarContainer {
+  width: calc(100vw - var(--spaces-total-width));
 }
 
 .spaces-toolbar-container {
