--- a/mail/themes/shared/mail/unifiedToolbarCustomizationPane.css
+++ b/mail/themes/shared/mail/unifiedToolbarCustomizationPane.css
@@ -31,6 +31,7 @@
   padding-block: 0.5rem;
   margin-block: 1rem;
   height: 2em;
+  max-width: 100vw;
 }
 
 .toolbar-target .spacer {
